force-app/main/default/objects/Contact/fields/Kai_Activation_URL__c.field-meta.xml
<CustomField>
    <fullName>Kai_Activation_URL__c</fullName>
    <label>Kai Activation URL</label>
    <type>Url</type>
</CustomField>