force-app/main/default/objects/Contact/fields/Kai_Invite_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Kai_Invite_Email_Sent__c</fullName>
    <label>Kai Invite Email Sent</label>
    <type>Date</type>
</CustomField>