force-app/main/default/objects/Contact/fields/Kai_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Kai_Onboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this Contact was created through the Kai onboarding portal. Set to true when the payload includes onboard-type: kai.</description>
    <label>Kai Onboarding</label>
    <type>Checkbox</type>
</CustomField>