force-app/main/default/objects/Contact/fields/Kai_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Kai_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>Kai User ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>