force-app/main/default/objects/Contact/fields/Send_KAI_to_Boomi__c.field-meta.xml
<CustomField>
    <fullName>Send_KAI_to_Boomi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send KAI to Boomi</label>
    <type>Checkbox</type>
</CustomField>